--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
