--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "adusei-ui": "^0.1.6",
     "clsx": "^2.1.1",
     "humps": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
