--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "simplex-noise": "^4.0.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
